--- a/css/index.css
+++ b/css/index.css
@@ -179,6 +179,40 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home header {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  margin-top: 4rem;
+  margin-bottom: 3rem;
+}
+.home header h1 {
+  margin-bottom: 2.5rem;
+}
+.home header nav a {
+  justify-content: space-evenly;
+  align-items: flex-end;
+  font-size: 1.5rem;
+  color: black;
+  padding: 1.5rem;
+  border: 2px solid red;
+}
+@media (max-width: 500px) {
+  .home header nav a {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
+.home header .funBus {
+  border-top: 2px dashed lightgray;
+}
+.home header .welcome {
+  margin-top: 2.5rem;
+  padding-bottom: 2.5rem;
+  border-bottom: 2px dashed lightgray;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
@@ -224,4 +258,15 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .destination .btn {
+  width: 15rem;
+  font-size: 1.5rem;
+  background-color: teal;
+  color: white;
+  padding-top: 1rem;
+  padding-left: 3.5rem;
+  padding-right: 3rem;
+  padding-bottom: 1rem;
+  border-radius: 12px;
 }
